# jax-sph

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  args.txt  data_gen.ipynb  data_get.ipynb  heat_eq.ipynb  main.py  optim.ipynb  optim_a_final.h5  optim_b_final.h5  optim_b_init.h5  pyproject.toml  requirements.txt  setup.py  solver_run_test.sh  taylor-green-vortex_3d_sph.ipynb  test.py  traj_50.h5
.github/workflows/: publish.yml  ruff.yml  tests.yml
cases/: __init__.py  cf.py  cf.yaml  cw.py  cw.yaml  db.py  db.yaml  db_multi.py  db_multi.yaml  ht.py  ht.yaml  ldc.py  ldc.yaml  od.py  od.yaml  pf.py  pf.yaml  rlx.py  rpf.py  rpf.yaml  rti.py  rti.yaml  tgv.py  tgv.yaml  ut.py  ut.yaml
configs/: defaults.yaml  sitl.yaml
docs/: conf.py  index.rst  requirements.txt
docs/pages/: case_setup.rst  defaults.rst  neighbors.rst  simulate.rst  solver.rst  tutorials.rst  utils.rst
experiments/: config.py  dirichlet_energy.py  grads.ipynb  inverse.ipynb  plt_ekin.py  plt_ht.py  plt_temp.py  run.py  sitl.py  utils.py
experiments/configs/: gns.yaml  sitl.yaml
jax_energy_spectrum/: energy_spectrum.py  energy_spectrumn.py  grid_setup.py  mls.py
jax_sph/: args.py  case_setup.py  coloring_scheme.py  defaults.py  eos.py  integrator.py  io_state.py  kernel.py  kernels.py  math.py  optim.py  partition.py  simulate.py  solver.py  turbulence.py  utils.py  visualize.py
jax_sph/jax_md/: dataclasses.py  partition.py  space.py  util.py
jax_sph/solver/: sph_riemann.py  sph_riemann_backup.py  sph_riemann_bc.py  sph_tvf.py  ut.py
misc/: clean_data.py  count_files_db.py  data_utils_visualization.sh  debug_dataset.py  dm_water3D.py  nondimensionalization.ods  plt_ekin.py  tgv2d_tracer.py
notebooks/: iclr24_grads.ipynb  iclr24_inverse.ipynb  iclr24_sitl.ipynb  iclr24_sitl.py  kernel_plots.ipynb  neighbors.ipynb  neighbors.py  turbulence_tgv2d.ipynb  turbulence_utils.ipynb  tutorial.ipynb
notebooks/misc/: dirichlet_energy.py
riemann_plot/: db2d_riemann_test.sh  riemann_tgv_plot.py  rlx.sh  tgv2d_riemann_test.sh
scripts/: dataset_db.sh  dataset_gen.py  dataset_ldc.sh  dataset_rpf.sh  dataset_tgv.sh  dataset_tgv_debug.sh  dataset_ut.sh
target_traj/: traj_000.h5  traj_000_b.h5  traj_100.h5  traj_100_b.h5
tests/: test_cf2d.py  test_kernel.py  test_neighbors.py  test_pf2d.py  test_tgv2d.py
tests/ref/: tgv_2d_Ekin_ref.txt  tgv_2d_Ekin_ref_Rie.txt  tgv_2d_Ekin_ref_tvf.txt  tgv_2d_u_max_ref.txt  tgv_2d_u_max_ref_Rie.txt  tgv_2d_u_max_ref_tvf.txt
validation/: cf2d.sh  db2d.sh  ldc2d.sh  pf2d.sh  rti2d.sh  tgv2d.sh  tgv2d_riemann.sh  tgv2d_riemann_test.sh  tgv3d.sh  validate.py
validation/figs/: 2d_dam_break.odt
validation/ref/: Buchner_pressureProfile.csv  dambreak_data.py  ldc_data.py  ldc_data_u_vel.csv  rpf_t_2.csv  rpf_t_20.csv  tgv3d_ref_10.txt  tgv3d_ref_100.txt  tgv3d_ref_50.txt  tgv_analytical_sol.py
validation_paper/: db2d.sh  ldc2d.sh  tgv2d.sh  tgv3d.sh  validate_paper.py
validation_paper/ref/: ldc_data_v_vel.csv  poiseuille_data.py  rpf_t_10.csv  rpf_t_100.csv  tgv3d_ref_20.txt
